[gd_scene load_steps=11 format=3 uid="uid://bn6qjrb66so70"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_2qeei"]
[ext_resource type="PackedScene" uid="uid://bbnm1txcdvhb6" path="res://ui/tower_panels/sharp_shooter_panel.tscn" id="2_7i1hu"]
[ext_resource type="PackedScene" uid="uid://bx003sunwyekw" path="res://ui/tower_panels/stinger_panel.tscn" id="3_hv2wv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j4ru6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p54qm"]
bg_color = Color(0.168627, 0.168627, 0.168627, 0.647059)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ms6jk"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 0.509804)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_id8px"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 0.509804)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Animation" id="Animation_s1rv6"]
resource_name = "MenuSlideDown"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TowerMenu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TowerMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_51msi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TowerMenu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TowerMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1qv17"]
_data = {
"MenuClose": SubResource("Animation_s1rv6"),
"RESET": SubResource("Animation_51msi")
}

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2qeei")

[node name="SelectRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="Collider" type="CollisionShape2D" parent="SelectRange"]
shape = SubResource("CircleShape2D_j4ru6")

[node name="TowerMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -432.0
offset_top = 228.0
offset_right = 432.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(432, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_p54qm")

[node name="Close" type="Button" parent="TowerMenu"]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -560.0
offset_top = 268.0
offset_right = -496.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
text = "Menu
"

[node name="TowerBar" type="FlowContainer" parent="TowerMenu"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 848.0
offset_bottom = 64.0
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 48

[node name="SharpShooterPanel" parent="TowerMenu/TowerBar" instance=ExtResource("2_7i1hu")]
layout_mode = 2

[node name="StingerPanel" parent="TowerMenu/TowerBar" instance=ExtResource("3_hv2wv")]
layout_mode = 2

[node name="CoinPanel" type="Panel" parent="TowerMenu"]
layout_mode = 0
offset_left = 112.0
offset_top = -56.0
offset_right = 316.0
offset_bottom = -8.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ms6jk")

[node name="CoinCounter" type="RichTextLabel" parent="TowerMenu/CoinPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 7.0
offset_right = 201.0
offset_bottom = 197.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 25
text = "Coins: 100"

[node name="CoinIcon" type="RichTextLabel" parent="TowerMenu/CoinPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = -38.0
offset_right = 59.0
offset_bottom = 45.0
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "
ðŸ’°
"
fit_content = true

[node name="WavePanel" type="Panel" parent="TowerMenu"]
layout_mode = 0
offset_left = 328.0
offset_top = -56.0
offset_right = 532.0
offset_bottom = -8.0
theme_override_styles/panel = SubResource("StyleBoxFlat_id8px")

[node name="WaveCounter" type="RichTextLabel" parent="TowerMenu/WavePanel"]
custom_minimum_size = Vector2(128, 40)
layout_mode = 0
offset_left = 56.0
offset_top = 8.0
offset_right = 209.0
offset_bottom = 115.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 25
text = "Wave: 20/40"

[node name="WaveIcon" type="RichTextLabel" parent="TowerMenu/WavePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = -38.0
offset_right = 59.0
offset_bottom = 45.0
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "
[wave]ðŸŒŠ[/wave]"
fit_content = true

[node name="EnemyPanel" type="Panel" parent="TowerMenu"]
layout_mode = 0
offset_left = 544.0
offset_top = -56.0
offset_right = 748.0
offset_bottom = -8.0
theme_override_styles/panel = SubResource("StyleBoxFlat_id8px")

[node name="EnemyCounter" type="RichTextLabel" parent="TowerMenu/EnemyPanel"]
custom_minimum_size = Vector2(128, 40)
layout_mode = 0
offset_left = 40.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 48.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
text = "Enemies Left: 1"

[node name="EnemyIcon" type="RichTextLabel" parent="TowerMenu/EnemyPanel"]
layout_mode = 0
offset_left = 3.0
offset_top = -26.0
offset_right = 54.0
offset_bottom = 57.0
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "
[pulse freq=0.5]ðŸ‘¿[/pulse]"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1qv17")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="body_entered" from="SelectRange" to="." method="_on_select_range_body_entered"]
[connection signal="body_exited" from="SelectRange" to="." method="_on_select_range_body_exited"]
[connection signal="pressed" from="TowerMenu/Close" to="." method="_on_button_pressed"]
